# z8-asm

./: CMakeLists.txt  README.md
src/: main.c
src/ast/: ast.c  ast.h
src/cli/: cli.c  cli.h
src/compiler/: compiler.c  compiler.h
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h
tests/: CMakeLists.txt  ast_test.cpp  compiler_test.cpp  lexer_test.cpp  parser_test.cpp
